Added concussion state to Snowbee and implemented it with the walls, Added Tag system in GameObject wich should be implemented further

--- a/Pengo/Pengo.vcxproj.filters
+++ b/Pengo/Pengo.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Source Files\Commands">
       <UniqueIdentifier>{b1e5d76a-af71-4c76-b513-7fc5f820c0ba}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Walls\New Wallmang">
+      <UniqueIdentifier>{97e48775-76a0-4aaf-87f5-ba16f9cea815}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PengoMain.cpp">
@@ -46,9 +49,6 @@
       <Filter>Source Files\Player</Filter>
     </ClCompile>
     <ClCompile Include="Wall.cpp">
-      <Filter>Source Files\Walls</Filter>
-    </ClCompile>
-    <ClCompile Include="WallManager.cpp">
       <Filter>Source Files\Walls</Filter>
     </ClCompile>
     <ClCompile Include="PengoLevelLoader.cpp">
@@ -75,15 +75,15 @@
     <ClCompile Include="WallRow.cpp">
       <Filter>Source Files\Walls</Filter>
     </ClCompile>
+    <ClCompile Include="WallManager.cpp">
+      <Filter>Source Files\Walls\New Wallmang</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pengo.h">
       <Filter>Source Files\Player</Filter>
     </ClInclude>
     <ClInclude Include="Wall.h">
-      <Filter>Source Files\Walls</Filter>
-    </ClInclude>
-    <ClInclude Include="WallManager.h">
       <Filter>Source Files\Walls</Filter>
     </ClInclude>
     <ClInclude Include="PengoLevelLoader.h">
@@ -115,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="PlayerCommands.h">
       <Filter>Source Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="WallManager.h">
+      <Filter>Source Files\Walls\New Wallmang</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
