--- a/Pengo/Pengo.vcxproj.filters
+++ b/Pengo/Pengo.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Source Files\Commands">
       <UniqueIdentifier>{b1e5d76a-af71-4c76-b513-7fc5f820c0ba}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Screens">
+      <UniqueIdentifier>{04b6e40c-1a70-4516-89f6-8921bca8d0e8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PengoMain.cpp">
@@ -68,6 +71,9 @@
     </ClCompile>
     <ClCompile Include="WallManager.cpp">
       <Filter>Source Files\Walls</Filter>
+    </ClCompile>
+    <ClCompile Include="StartScreen.cpp">
+      <Filter>Source Files\Screens</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="WallManager.h">
       <Filter>Source Files\Walls</Filter>
+    </ClInclude>
+    <ClInclude Include="StartScreen.h">
+      <Filter>Source Files\Screens</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
