--- a/Pengo/Pengo.vcxproj.filters
+++ b/Pengo/Pengo.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Source Files\Screens">
       <UniqueIdentifier>{04b6e40c-1a70-4516-89f6-8921bca8d0e8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\DiamondBlock">
+      <UniqueIdentifier>{8ff330ef-65a2-41bf-a4f8-f0bc40e44476}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PengoMain.cpp">
@@ -79,7 +82,7 @@
       <Filter>Source Files\LevelHandling</Filter>
     </ClCompile>
     <ClCompile Include="DiamondBlock.cpp">
-      <Filter>Source Files\Commands</Filter>
+      <Filter>Source Files\DiamondBlock</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -123,7 +126,7 @@
       <Filter>Source Files\LevelHandling</Filter>
     </ClInclude>
     <ClInclude Include="DiamondBlock.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\DiamondBlock</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
