--- a/PacMan/PacMan.vcxproj.filters
+++ b/PacMan/PacMan.vcxproj.filters
@@ -5,14 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="GameObjects">
       <UniqueIdentifier>{2472c6bc-c794-450a-85a0-f2640676b581}</UniqueIdentifier>
     </Filter>
@@ -55,6 +47,9 @@
     <Filter Include="GameObjects\PowerUp">
       <UniqueIdentifier>{bb51ca05-719f-4aae-afba-2a29bab0bc8b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Observers">
+      <UniqueIdentifier>{6c169f76-1e86-42f8-826e-ed89b54bd86d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PacManMain.cpp">
@@ -94,7 +89,10 @@
       <Filter>GameObjects\IntersectionTile</Filter>
     </ClCompile>
     <ClCompile Include="PowerUp.cpp">
-      <Filter>GameObjects\Ghost</Filter>
+      <Filter>GameObjects\PowerUp</Filter>
+    </ClCompile>
+    <ClCompile Include="PowerUpObserver.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -153,7 +151,10 @@
       <Filter>Components\ObjectFilters</Filter>
     </ClInclude>
     <ClInclude Include="PowerUp.h">
-      <Filter>GameObjects\Ghost</Filter>
+      <Filter>GameObjects\PowerUp</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerUpObserver.h">
+      <Filter>Observers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
